Firefox: Option Page Bug Fix (#80)
* Fix theme breaking when enabling/disabling textbox selection/scrollbar options

* Make searchbar rounder

--- a/firefoxThemes/waifus/tab.css
+++ b/firefoxThemes/waifus/tab.css
@@ -1,7 +1,7 @@
 :root {
   --accent-color: inherit;
   --base-background-color: inherit;
-  --search-border-radius: 12px;
+  --search-border-radius: 40px;
 }
 
 body {
